apps/writer/kustomize/ephemeral-base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: writer
spec:
  selector:
    app: writer
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  type: ClusterIP
